--- a/Weather/index.html
+++ b/Weather/index.html
@@ -42,8 +42,8 @@
 
         <script>
 
-            const apiKey = "20e0ddc929d763f0decb773a9e980c77";
-            const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
+            const apiKey = "cdc0273ba0770162dae38bd8754e238a";
+            const apiUrl = "https://api.openweathermap.org/data/2.5/weather?q=&appid=";
 
             const searchBox = document.querySelector(".search input");
             const searchBtn = document.querySelector(".search button");
